IGNITE-13202 Fix javadoc for a release built with JDK11 (#11417)